reports/dist/run-bats-f17-3-single-90889/labels-on/artifacts/manifests/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      meta.helm.sh/release-name: sample
      meta.helm.sh/release-namespace: sample
    creationTimestamp: "2026-06-08T12:35:51Z"
    generation: 1
    labels:
      app: sample
      app.kubernetes.io/managed-by: Helm
    name: sample
    namespace: sample
    resourceVersion: "436"
    uid: af29f3dd-3023-43c9-a531-3856370cfb70
  spec:
    ingressClassName: nginx
    rules:
    - http:
        paths:
        - backend:
            service:
              name: sample
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
